log_pong/log_output/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: log-output-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: log-output
  template:
    metadata:
      labels:
        app: log-output
    spec:
      volumes:
        - name: shared-logs
          persistentVolumeClaim:
            claimName: log-pong-claim

      containers:
        - name: log-output-reader
          image: alxcd/devops_k8s-log-output_reader@sha256:17b8d1885df08a741e498cd65205a3f0e30599a85f9e3f383baa8cc6ac5f3f0d
          resources:
            requests:
              memory: "64Mi"
              cpu: "100m"
            limits:
              memory: "128Mi"
              cpu: "250m"
          volumeMounts:
          - name: shared-logs
            mountPath: /usr/src/app/logs
        - name: log-output-writer
          image: alxcd/devops_k8s-log-output_writer@sha256:a8509dca7e255ef963e55b579c4ba566d9e900ed68f9807ae03e89cddaac3cad
          resources:
            requests:
              memory: "64Mi"
              cpu: "100m"
            limits:
              memory: "128Mi"
              cpu: "250m"
          volumeMounts:
          - name: shared-logs
            mountPath: /usr/src/app/logs
